# felidae-network-subxt-client

./: Cargo.toml  README.md
artifacts/: metadata.json  metadata.scale
src/: id_types.rs  lib.rs  main.rs
